fix: fully working on iOs/ Android

--- a/src/style/animations.scss
+++ b/src/style/animations.scss
@@ -18,6 +18,16 @@
         transform: translate(30, 0);
     }
 }
+@keyframes fabItemTitleLeft {
+    to {
+        opacity: 1;
+        transform: translate(0, 0);
+    }
+    from {
+        opacity: 0;
+        transform: translate(-30, 0);
+    }
+}
 @keyframes fabIconRot {
     from {
         transform: rotate(0deg);
